--- a/custom_components/switch_manager/blueprints/homematic-2-buttons.yaml
+++ b/custom_components/switch_manager/blueprints/homematic-2-buttons.yaml
@@ -18,7 +18,7 @@ buttons:
       - title: hold
         conditions:
           - key: type
-            value: press_long
+            value: press_long_start
   - x: 85
     y: 252
     width: 330
@@ -34,4 +34,5 @@ buttons:
       - title: hold
         conditions:
           - key: type
-            value: press_long
+            value: press_long_start
+
